crates/solidity/testing/snapshots/bindings_output/events/custom_types/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:13:17]
    │
 13 │         emit Log(Severity.INFO, "Testing");
    │                 ─────────────┬────────────  
    │                              ╰────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     enum Severity {
    │          ────┬───  
    │              ╰───── name: 2
  3 │         INFO,
    │         ──┬─  
    │           ╰─── name: 3
  4 │         ERROR
    │         ──┬──  
    │           ╰──── name: 4
    │ 
  7 │     event Log(
    │           ─┬─  
    │            ╰─── name: 5
  8 │         Severity level,
    │         ────┬─── ──┬──  
    │             ╰─────────── ref: 2
    │                    │    
    │                    ╰──── name: 6
  9 │         string name
    │                ──┬─  
    │                  ╰─── name: 7
    │ 
 12 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 8
 13 │         emit Log(Severity.INFO, "Testing");
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 9
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────│ ▶ contract Test {
  2 │ │     ╭─▶     enum Severity {
  3 │ │     │           INFO,
    │ │     │           ──┬─  
    │ │     │             ╰─── definiens: 3
  4 │ │     │           ERROR
    │ │     │           ──┬──  
    │ │     │             ╰──── definiens: 4
  5 │ │   │ ├─▶     }
    │ │   │ │           
    │ │   │ ╰─────────── definiens: 2
  6 │ │   ╭───▶ 
    ┆ ┆   ┆     
  8 │ │   │             Severity level,
    │ │   │     ───────────┬──────────  
    │ │   │                ╰──────────── definiens: 6
  9 │ │   │             string name
    │ │   │     ──────────┬─────────  
    │ │   │               ╰─────────── definiens: 7
 10 │ │ │ ├───▶     );
    │ │ │ │              
    │ │ │ ╰────────────── definiens: 5
 11 │ │ ╭─────▶ 
    ┆ ┆ ┆       
 13 │ │ │               emit Log(Severity.INFO, "Testing");
    │ │ │       ──────────────────────┬─────────────────────  
    │ │ │                             ╰─────────────────────── definiens: 9
 14 │ │ ├─────▶     }
    │ │ │               
    │ │ ╰─────────────── definiens: 8
 15 │ ├───────▶ }
    │ │             
    │ ╰───────────── definiens: 1
────╯
